--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   },
   "scripts": {
     "dev": "node backend/server",
-    "server": "nodemon backend/server",
-    "client": "npm start --prefix frontend",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "nodemon backend/server",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
-    "build": "cd frontend/ && npm install --only=dev && NODE_ENV=development npm install --no-shrinkwrap && npm run build"
+    "build": "npm install --only=dev && NODE_ENV=development npm install --no-shrinkwrap && npm run build"
   },
   "author": "George Gitau",
   "license": "MIT",
